Bug 362539 - Global selection mask crash with move tool.(has gdb backtrace)
Summary: Global selection mask crash with move tool.(has gdb backtrace)
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Layer Stack (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-05-01 11:29 UTC by wolthera
Modified: 2016-05-02 13:24 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description wolthera 2016-05-01 11:29:03 UTC
Crash when modifying the selection with the move tool.

Reproducible: Always

Steps to Reproduce:
1. Make selection
2. Show global selection mask.
3. Transform selection with the transform tool(this worked for me)
4. Use move tool
5. Get crash.



Thread 1 "krita" received signal SIGSEGV, Segmentation fault.
KisNode::parent (this=this@entry=0x0)
    at /home/krita/kde/src/krita/libs/image/kis_node.cpp:346
346	    QReadLocker l(&m_d->nodeSubgraphLock);
(gdb) thread apply all backtrace

Thread 30 (Thread 0x7fffa566d700 (LWP 13972)):
#0  pthread_cond_timedwait@@GLIBC_2.3.2 ()
    at ../sysdeps/unix/sysv/linux/x86_64/pthread_cond_timedwait.S:225
#1  0x00007ffff559b738 in QWaitCondition::wait(QMutex*, unsigned long) ()
   from /home/krita/Qt/5.6/gcc_64/lib/libQt5Core.so.5
#2  0x00007ffff5597467 in ?? ()
   from /home/krita/Qt/5.6/gcc_64/lib/libQt5Core.so.5
#3  0x00007ffff559ac89 in ?? ()
   from /home/krita/Qt/5.6/gcc_64/lib/libQt5Core.so.5
#4  0x00007fffef15a6fa in start_thread (arg=0x7fffa566d700)
    at pthread_create.c:333
#5  0x00007ffff4c96b5d in clone ()
    at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 29 (Thread 0x7fffc0b41700 (LWP 13971)):
#0  pthread_cond_timedwait@@GLIBC_2.3.2 ()
    at ../sysdeps/unix/sysv/linux/x86_64/pthread_cond_timedwait.S:225
#1  0x00007ffff559b738 in QWaitCondition::wait(QMutex*, unsigned long) ()
   from /home/krita/Qt/5.6/gcc_64/lib/libQt5Core.so.5
#2  0x00007ffff5597467 in ?? ()
   from /home/krita/Qt/5.6/gcc_64/lib/libQt5Core.so.5
#3  0x00007ffff559ac89 in ?? ()
---Type <return> to continue, or q <return> to quit---
   from /home/krita/Qt/5.6/gcc_64/lib/libQt5Core.so.5
#4  0x00007fffef15a6fa in start_thread (arg=0x7fffc0b41700)
    at pthread_create.c:333
#5  0x00007ffff4c96b5d in clone ()
    at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 28 (Thread 0x7fff9271f700 (LWP 13970)):
#0  pthread_cond_timedwait@@GLIBC_2.3.2 ()
    at ../sysdeps/unix/sysv/linux/x86_64/pthread_cond_timedwait.S:225
#1  0x00007ffff559b738 in QWaitCondition::wait(QMutex*, unsigned long) ()
   from /home/krita/Qt/5.6/gcc_64/lib/libQt5Core.so.5
#2  0x00007ffff5597467 in ?? ()
   from /home/krita/Qt/5.6/gcc_64/lib/libQt5Core.so.5
#3  0x00007ffff559ac89 in ?? ()
   from /home/krita/Qt/5.6/gcc_64/lib/libQt5Core.so.5
#4  0x00007fffef15a6fa in start_thread (arg=0x7fff9271f700)
    at pthread_create.c:333
#5  0x00007ffff4c96b5d in clone ()
    at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 27 (Thread 0x7fff91f1e700 (LWP 13969)):
#0  pthread_cond_timedwait@@GLIBC_2.3.2 ()
    at ../sysdeps/unix/sysv/linux/x86_64/pthread_cond_timedwait.S:225
---Type <return> to continue, or q <return> to quit---
#1  0x00007ffff559b738 in QWaitCondition::wait(QMutex*, unsigned long) ()
   from /home/krita/Qt/5.6/gcc_64/lib/libQt5Core.so.5
#2  0x00007ffff5597467 in ?? ()
   from /home/krita/Qt/5.6/gcc_64/lib/libQt5Core.so.5
#3  0x00007ffff559ac89 in ?? ()
   from /home/krita/Qt/5.6/gcc_64/lib/libQt5Core.so.5
#4  0x00007fffef15a6fa in start_thread (arg=0x7fff91f1e700)
    at pthread_create.c:333
#5  0x00007ffff4c96b5d in clone ()
    at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 11 (Thread 0x7fffa5e6e700 (LWP 13953)):
#0  pthread_cond_wait@@GLIBC_2.3.2 ()
    at ../sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:185
#1  0x00007ffff559b7eb in QWaitCondition::wait(QMutex*, unsigned long) ()
   from /home/krita/Qt/5.6/gcc_64/lib/libQt5Core.so.5
#2  0x00007ffff6771aa2 in ?? ()
   from /home/krita/Qt/5.6/gcc_64/lib/libQt5Widgets.so.5
#3  0x00007ffff559ac89 in ?? ()
   from /home/krita/Qt/5.6/gcc_64/lib/libQt5Core.so.5
#4  0x00007fffef15a6fa in start_thread (arg=0x7fffa5e6e700)
    at pthread_create.c:333
#5  0x00007ffff4c96b5d in clone ()
---Type <return> to continue, or q <return> to quit---
    at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 10 (Thread 0x7fffa67b6700 (LWP 13952)):
#0  pthread_cond_wait@@GLIBC_2.3.2 ()
    at ../sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:185
#1  0x00007ffff559b7eb in QWaitCondition::wait(QMutex*, unsigned long) ()
   from /home/krita/Qt/5.6/gcc_64/lib/libQt5Core.so.5
#2  0x00007ffff5595116 in QSemaphore::tryAcquire(int, int) ()
   from /home/krita/Qt/5.6/gcc_64/lib/libQt5Core.so.5
#3  0x00007ffff3127413 in KisTileDataSwapper::waitForWork (
    this=<optimized out>)
    at /home/krita/kde/src/krita/libs/image/tiles3/swap/kis_tile_data_swapper.cpp:86
#4  0x00007ffff312760a in KisTileDataSwapper::run (
    this=0x7ffff35a3400 <(anonymous namespace)::Q_QGS_s_instance::innerFunction()::holder+64>)
    at /home/krita/kde/src/krita/libs/image/tiles3/swap/kis_tile_data_swapper.cpp:92
#5  0x00007ffff559ac89 in ?? ()
   from /home/krita/Qt/5.6/gcc_64/lib/libQt5Core.so.5
#6  0x00007fffef15a6fa in start_thread (arg=0x7fffa67b6700)
    at pthread_create.c:333
#7  0x00007ffff4c96b5d in clone ()
---Type <return> to continue, or q <return> to quit---
    at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 9 (Thread 0x7fffbbfff700 (LWP 13951)):
#0  pthread_cond_wait@@GLIBC_2.3.2 ()
    at ../sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:185
#1  0x00007ffff559b7eb in QWaitCondition::wait(QMutex*, unsigned long) ()
   from /home/krita/Qt/5.6/gcc_64/lib/libQt5Core.so.5
#2  0x00007ffff5594e8b in QSemaphore::acquire(int) ()
   from /home/krita/Qt/5.6/gcc_64/lib/libQt5Core.so.5
#3  0x00007ffff310d7be in KisTileDataPooler::waitForWork (
    this=0x7ffff35a33c0 <(anonymous namespace)::Q_QGS_s_instance::innerFunction()::holder>)
    at /home/krita/kde/src/krita/libs/image/tiles3/kis_tile_data_pooler.cc:165
#4  0x00007ffff310df7a in KisTileDataPooler::run (
    this=0x7ffff35a33c0 <(anonymous namespace)::Q_QGS_s_instance::innerFunction()::holder>)
    at /home/krita/kde/src/krita/libs/image/tiles3/kis_tile_data_pooler.cc:187
#5  0x00007ffff559ac89 in ?? ()
   from /home/krita/Qt/5.6/gcc_64/lib/libQt5Core.so.5
#6  0x00007fffef15a6fa in start_thread (arg=0x7fffbbfff700)
    at pthread_create.c:333
#7  0x00007ffff4c96b5d in clone ()
    at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109
---Type <return> to continue, or q <return> to quit---

Thread 6 (Thread 0x7fffcbfff700 (LWP 13947)):
#0  0x00007ffff4c8ae8d in poll () at ../sysdeps/unix/syscall-template.S:84
#1  0x00007fffee82f31c in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007fffee82f42c in g_main_context_iteration ()
   from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007ffff57ac4e7 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /home/krita/Qt/5.6/gcc_64/lib/libQt5Core.so.5
#4  0x00007ffff575aefa in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /home/krita/Qt/5.6/gcc_64/lib/libQt5Core.so.5
#5  0x00007ffff559638c in QThread::exec() ()
   from /home/krita/Qt/5.6/gcc_64/lib/libQt5Core.so.5
#6  0x00007fffef385cd5 in ?? ()
   from /home/krita/Qt/5.6/gcc_64/lib/libQt5DBus.so.5
#7  0x00007ffff559ac89 in ?? ()
   from /home/krita/Qt/5.6/gcc_64/lib/libQt5Core.so.5
#8  0x00007fffef15a6fa in start_thread (arg=0x7fffcbfff700)
    at pthread_create.c:333
#9  0x00007ffff4c96b5d in clone ()
    at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 5 (Thread 0x7fffd903c700 (LWP 13946)):
#0  0x00007ffff4c8ae8d in poll () at ../sysdeps/unix/syscall-template.S:84
---Type <return> to continue, or q <return> to quit---
#1  0x00007fffee82f31c in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007fffee82f6a2 in g_main_loop_run ()
   from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007fffde499906 in ?? () from /usr/lib/x86_64-linux-gnu/libgio-2.0.so.0
#4  0x00007fffee855b45 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#5  0x00007fffef15a6fa in start_thread (arg=0x7fffd903c700)
    at pthread_create.c:333
#6  0x00007ffff4c96b5d in clone ()
    at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 4 (Thread 0x7fffd983d700 (LWP 13945)):
#0  0x00007ffff4c8ae8d in poll () at ../sysdeps/unix/syscall-template.S:84
#1  0x00007fffee82f31c in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007fffee82f42c in g_main_context_iteration ()
   from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007fffee82f469 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007fffee855b45 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#5  0x00007fffef15a6fa in start_thread (arg=0x7fffd983d700)
    at pthread_create.c:333
#6  0x00007ffff4c96b5d in clone ()
    at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 3 (Thread 0x7fffda03e700 (LWP 13944)):
---Type <return> to continue, or q <return> to quit---
#0  0x00007ffff4c8ae8d in poll () at ../sysdeps/unix/syscall-template.S:84
#1  0x00007fffee82f31c in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007fffee82f42c in g_main_context_iteration ()
   from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007fffda04628d in ?? ()
   from /usr/lib/x86_64-linux-gnu/gio/modules/libdconfsettings.so
#4  0x00007fffee855b45 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#5  0x00007fffef15a6fa in start_thread (arg=0x7fffda03e700)
    at pthread_create.c:333
#6  0x00007ffff4c96b5d in clone ()
    at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 2 (Thread 0x7fffe4867700 (LWP 13943)):
#0  0x00007ffff4c8ae8d in poll () at ../sysdeps/unix/syscall-template.S:84
#1  0x00007ffff35bcc62 in ?? () from /usr/lib/x86_64-linux-gnu/libxcb.so.1
#2  0x00007ffff35be8d7 in xcb_wait_for_event ()
   from /usr/lib/x86_64-linux-gnu/libxcb.so.1
#3  0x00007fffe5716dc9 in ?? ()
   from /home/krita/Qt/5.6/gcc_64/lib/libQt5XcbQpa.so.5
#4  0x00007ffff559ac89 in ?? ()
   from /home/krita/Qt/5.6/gcc_64/lib/libQt5Core.so.5
#5  0x00007fffef15a6fa in start_thread (arg=0x7fffe4867700)
    at pthread_create.c:333
---Type <return> to continue, or q <return> to quit---
#6  0x00007ffff4c96b5d in clone ()
    at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 1 (Thread 0x7ffff7f108c0 (LWP 13939)):
#0  KisNode::parent (this=this@entry=0x0)
    at /home/krita/kde/src/krita/libs/image/kis_node.cpp:346
#1  0x00007ffff31f1153 in KisLayerUtils::sortAndFilterMergableInternalNodes (
    nodes=..., allowMasks=allowMasks@entry=true)
    at /home/krita/kde/src/krita/libs/image/kis_layer_utils.cpp:836
#2  0x00007fffaafe1983 in MoveStrokeStrategy::MoveStrokeStrategy (
    this=0xde586a0, nodes=..., updatesFacade=0xca78e68, undoAdapter=0xca79068)
    at /home/krita/kde/src/krita/plugins/tools/basictools/strokes/move_stroke_strategy.cpp:39
#3  0x00007fffaafdc863 in KisToolMove::startStrokeImpl (
    this=this@entry=0xc873750, mode=mode@entry=KisToolMove::MoveGroup, 
    pos=pos@entry=0x7fffffffc330)
    at /home/krita/kde/src/krita/plugins/tools/basictools/kis_tool_move.cc:159
#4  0x00007fffaafdd121 in KisToolMove::startAction (this=0xc873750, 
    event=0x7fffffffc390, mode=KisToolMove::MoveGroup)
    at /home/krita/kde/src/krita/plugins/tools/basictools/kis_tool_move.cc:283
#5  0x00007ffff762c82e in KisToolProxy::forwardToTool (
    this=this@entry=0xc7f4260, state=state@entry=KisToolProxy::BEGIN, 
    action=action@entry=KisTool::Primary, event=event@entry=0x7fffffffca80, 
---Type <return> to continue, or q <return> to quit---q
docPQuit
(gdb) q
A debugging session is active.

	Inferior 1 [process 13939] will be killed.

Quit anyway? (y or n) y
krita@krita-2012-Client-Platform:~/kde/build$
Comment 1 Dmitry Kazakov 2016-05-02 12:29:00 UTC
It looks like you somehow happened to end up in a state when no layer is selected at all.
Comment 2 Dmitry Kazakov 2016-05-02 13:24:43 UTC
Git commit 538ca7dc159f18d54c373860f92e6e9d27112edb by Dmitry Kazakov.
Committed on 02/05/2016 at 13:24.
Pushed by dkazakov into branch 'master'.

Fix a weird crash reproduced by Wolthera

I didn't manage to reproduce it, but this is the only
possible way to get it. Thanks for a backtrace! :)

M  +3    -1    plugins/tools/basictools/kis_tool_move.cc

http://commits.kde.org/krita/538ca7dc159f18d54c373860f92e6e9d27112edb