Fix a weird crash reproduced by Wolthera

I didn't manage to reproduce it, but this is the only
possible way to get it. Thanks for a backtrace! :)

BUG:362539